--- a/introduction_to_htmlcss/inline_block_elements/index.html
+++ b/introduction_to_htmlcss/inline_block_elements/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Inline and Block elements</title>
-        <link href="index.css" type="stylesheet">
+        <link href="index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <div>
