--- a/introduction_to_htmlcss/form/index.html
+++ b/introduction_to_htmlcss/form/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="form-group">
                         <label for="description">Description*</label>
-                        <textarea type="textarea" id="description" name="description" rows="5"></textarea>
+                        <textarea type="textarea" id="description" name="description" rows="5" required></textarea>
                     </div>
                     <div class="form-group">
                         <label for="os">Operating System</label>
@@ -44,7 +44,7 @@
                         <label for="product">Product*</label>
                         <select id="product" name="product" required>
                             <option selected default disabled value="-1">Select...</option>
-                            <option value="1">Formoid</option>
+                            <option value="1">Formid</option>
                             <option value="2">Product</option>
                             <option value="3">Another Product</option>
                             <option value="4">Cafeteria Portal</option>
