--- a/introduction_to_htmlcss/web-page/index.html
+++ b/introduction_to_htmlcss/web-page/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Web Page TTN</title>
         <link href="index.css" type="text/css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     </head>
     <body>
         <section class="col-12" >
