updated to be a responsive webpage

--- a/introduction_to_htmlcss/form/index.html
+++ b/introduction_to_htmlcss/form/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Form</title>
         <link rel="stylesheet" href="index.css" type="text/css">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
         <section class="col-12">
