--- a/introduction_to_javascript/index.html
+++ b/introduction_to_javascript/index.html
@@ -3,6 +3,44 @@
     <head>
         <title>JavaScript Exercise</title>
         <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <script src="app.js"></script>
     </head>
+    <body>
+        <section class="col-12">
+            <header class="col-10">
+                <h1>JavaScript Exercises</h1>
+                <div id="r-nav" class="r-nav">
+                    <i class="fa fa-reorder fa-2x" onclick="rnavShow()"></i>
+                </div>
+                <div class="navbar" id="navbar">
+                    <ul>
+                        <li class="custom-li active">
+                            <button>Simple Interest</button>
+                        </li>
+                        <li class="custom-li">
+                            <button>Palindrome</button>
+                        </li>
+                        <li class="custom-li">
+                            <button>Circle</button>
+                        </li>
+                        <li class="custom-li">
+                            <button>Clone Object</button>
+                        </li>
+                        <li class="custom-li">
+                            <button>Employee</button>
+                        </li>
+                    </ul>
+                </div>
+            </header>
+
+            <section  class="col-10 body">
+                <div class="col-8 si" id="si">
+                    Simple Interest
+                </div>
+            </section>
+
+        </section>  
+    </body>
 </html>
