--- a/introduction_to_javascript/index.html
+++ b/introduction_to_javascript/index.html
@@ -119,7 +119,7 @@
                 </div>
             </section>
 
-            <footer class="col-10">
+            <footer class="col-10" style="display:none">
                 <div><a href="https://jsbin.com/taxaser/1/edit?html,css,js,output">JS Bin demo</a></div>
             </footer>
 
