--- a/introduction_to_jquery/q7/index.html
+++ b/introduction_to_jquery/q7/index.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
-        
-        <button id="click">Click Me!</button>
+        <div>
+            <button class="click">Click Me!</button>
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="app.js"></script>
