--- a/introduction_to_jquery/q8/index.html
+++ b/introduction_to_jquery/q8/index.html
@@ -5,9 +5,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <div class="container">
         <button id="my-button">I am Hardcoded</button>
-        
+        </div>
+
+        <div class="footer">
+            Button Clicked: <p> </p>
+        </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="app.js"></script>
     </body>
