--- a/introduction_to_jquery/q9/index.html
+++ b/introduction_to_jquery/q9/index.html
@@ -20,7 +20,7 @@
 
         <div id="selectedValues"> Nothing changed in the select as of now.</div>
 
-        <script src="https:/ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
