Updated question 17 link

--- a/introduction_to_jquery/index.html
+++ b/introduction_to_jquery/index.html
@@ -78,7 +78,7 @@ Question 15
 Question 16
                 </a>
 
-                <a href="#" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/cilodep/edit?html,css,js,output" class="solution-button" target="_blank">
 Question 17
                 </a>
             </section>
