todo-replaced tag

--- a/introduction_to_jquery/q6/index.html
+++ b/introduction_to_jquery/q6/index.html
@@ -7,7 +7,7 @@
     <body>
 
         <div class="mydiv">
-            This is the Div Tag
+            This is the Div Tag <button value="asdgs"></button>
         </div>
 
         <button>
