todo-subsub menus created and tried to implement loader.

--- a/introduction_to_jquery/q10/index.html
+++ b/introduction_to_jquery/q10/index.html
@@ -6,19 +6,253 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
     </head>
-    <body>
-        
+    <body>        
         <header class="col-12">
             <section class="col-10 navbar">
                 <ul>
                     <li class="menu">Menu <i class="fas fa-angle-down"></i>
-                    <div class="sub-menu-hidden">
+                    <div class="sub-menu-hidden parent">
                         <ul>
-                            <li>Dashboard</li><hr>
-                            <li>Home</li><hr>
-                            <li>About Us</li><hr>
-                            <li>About the Product</li><hr>
-                            <li>Let's meet</li><hr>
+                            <li class="loader"></li>
+                            <li class="container">
+                                Dashboard <i class="fas fa-angle-right"></i>
+                                <div class="sub-menu-hidden children">
+                                    <ul>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 2
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 3
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 4
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 5
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 6
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 7
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 8
+                                        </li>
+                                        <hr>
+                                    </ul>
+                                </div>
+                            </li>
+                            <hr>
+                            <li class="container">
+                                Home<i class="fas fa-angle-right"></i>
+                                <div class="sub-menu-hidden children">
+                                    <ul>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 2
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 3
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 4
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 5
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 6
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 7
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 8
+                                        </li>
+                                        <hr>
+                                    </ul>
+                                </div>
+                            </li><hr>
+                            <li class="container">
+                                About Us <i class="fas fa-angle-right"></i>
+                                <div class="sub-menu-hidden children">
+                                    <ul>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 2
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 3
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 4
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 5
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 6
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 7
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 8
+                                        </li>
+                                        <hr>
+                                    </ul>
+                                </div>
+                            </li>
+                            <hr>
+                            <li class="container">
+                                About the Product <i class="fas fa-angle-right"></i>
+                                <div class="sub-menu-hidden children">
+                                    <ul>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 2
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 3
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 4
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 5
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 6
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 7
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 8
+                                        </li>
+                                        <hr>
+                                    </ul>
+                                </div>
+                            </li>
+                            <hr>
+                            <li class="container">
+                                Let's meet <i class="fas fa-angle-right"></i>
+                                <div class="sub-menu-hidden children">
+                                    <ul>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 1
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 2
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 3
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 4
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 5
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 6
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 7
+                                        </li>
+                                        <hr>
+                                        <li>
+                                            Sub menu 8
+                                        </li>
+                                        <hr>
+                                    </ul>
+                                </div>
+                            </li>
+                            <hr>
                         </ul>
                     </div>
 
