--- a/htmlcss_essentials/ex1/index.html
+++ b/htmlcss_essentials/ex1/index.html
@@ -18,6 +18,20 @@
                             <div>
                                 <input type="text" name="email" id="email" placeholder="Email or Phone"></input>
                             </div>
+                            <div>
+                                    <button>Forgot Email?</button>
+                            </div>
+                            <div>
+                                Not your computer? Use Guest mode to sign in privately.
+                            </div>
+                            <div>
+                                <a href="#">Learn more</a>
+                            </div>
+
+                            <div>
+                                <button>Create Account</button>
+                                <button class="signin">Next</button>
+                            </div>
                         </div>
                     </div>
                 </div>
