ex3 completed fully

--- a/introduction_to_css/ex3/index.html
+++ b/introduction_to_css/ex3/index.html
@@ -165,6 +165,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="container">
+                        <div class="page-footer-email">
+                            <h3>TO THE NEW</h3>
+                            <p>For sharing your feedback on this newsletter,</p>
+                            <p>please email us at: newertimes@tothenew.com</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
     </body>
