implemented float label

--- a/htmlcss_essentials/ex1/index.html
+++ b/htmlcss_essentials/ex1/index.html
@@ -15,8 +15,9 @@
                         <div class="col-10">
                             <h1>Sign In</h1>
                             <h4>to continue to Admin console</h4>
-                            <div>
-                                <input type="text" name="email" id="email" placeholder="Email or Phone"></input>
+                            <div class="float-label">
+                                <input type="text" name="email" id="email"></input>
+                                <label for="email">Email or phone</label>
                             </div>
                             <div>
                                     <button>Forgot Email?</button>
