--- a/page_layouts_and_structure/prac/index.html
+++ b/page_layouts_and_structure/prac/index.html
@@ -12,20 +12,22 @@
     </head>
     <body>
         <header>
-            <div class="logo">
-                <img src="images/ttn_logo.png" alt="TO THE NEW">
+            <div class="hfwrapper">
+                <div class="logo">
+                    <img src="images/ttn_logo.png" alt="TO THE NEW">
+                </div>
+                <nav>
+                    <a href="JavaScript:Void(0)">Home</a>
+                    <a href="JavaScript:Void(0)">About</a>
+                    <a href="JavaScript:Void(0)">Services</a>
+                    <a href="JavaScript:Void(0)">Contact</a>
+                </nav>
+                <ul class="social">
+                    <li><a href="JavaScript:Void(0)"><i class="fab fa-google-plus-square fa-2x"></i></a></li>
+                    <li><a href="JavaScript:Void(0)"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                    <li><a href="JavaScript:Void(0)"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                </ul>
             </div>
-            <nav>
-                <a href="JavaScript:Void(0)">Home</a>
-                <a href="JavaScript:Void(0)">About</a>
-                <a href="JavaScript:Void(0)">Services</a>
-                <a href="JavaScript:Void(0)">Contact</a>
-            </nav>
-            <ul class="social">
-                <li><a href="JavaScript:Void(0)"><i class="fab fa-google-plus-square fa-2x"></i></a></li>
-                <li><a href="JavaScript:Void(0)"><i class="fab fa-facebook-square fa-2x"></i></a></li>
-                <li><a href="JavaScript:Void(0)"><i class="fab fa-twitter-square fa-2x"></i></a></li>
-            </ul>
         </header>
         <section>
             <div class="col-10">
@@ -43,23 +45,23 @@
                         <ul>
                             <li>
                                 <i class="fas fa-folder-open fa-6x"></i>
-                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
 
                                 <button>Read More</button>
                             </li>
                             <li>
                                 <i class="fas fa-folder-open fa-6x"></i>
-                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
                                 <button>Read More</button>
                             </li>
                             <li>
                                 <i class="fas fa-folder-open fa-6x"></i>
-                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
                                 <button>Read More</button>
                             </li>
                             <li>
                                 <i class="fas fa-folder-open fa-6x"></i>
-                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
                                 <button>Read More</button>
                             </li>
                         </ul>
@@ -67,5 +69,11 @@
                 </div>                
             </div>
         </section>
+
+        <footer>
+            <div class="hfwrapper">
+                TO THE NEW &copy; 2019
+            </div>
+        </footer>
     </body>
 </html>
