minor bugs fixed

--- a/forms_tables/ex2/index.html
+++ b/forms_tables/ex2/index.html
@@ -9,7 +9,7 @@
         
         <section>
 
-            <table border="10px">
+            <table>
                 <caption>Race Results</caption>
                 <thead>
                     <tr>
