--- a/css_animations_background_sprite/index.html
+++ b/css_animations_background_sprite/index.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <div class="container">
-            
+            <div class="content">
+                
+            </div>
         </div>
     </body>    
 </html>
