--- a/css_animations_background_sprite/index.html
+++ b/css_animations_background_sprite/index.html
@@ -31,6 +31,11 @@ Diam vel quam elementum pulvinar etiam non quam lacus. Risus quis varius quam qu
                 </p>
 
             </div>
+            <div class="footer">
+                <span class="facebook"></span>
+                <span class="instagram"></span>
+                <span class="twitter"></span>
+            </div>
         </div>
     </body>    
 </html>
