--- a/css_animations_background_sprite/index.html
+++ b/css_animations_background_sprite/index.html
@@ -29,8 +29,14 @@ Diam vel quam elementum pulvinar etiam non quam lacus. Risus quis varius quam qu
 
 
                 </p>
-
             </div>
+
+            <div class="animated">
+                <p>
+                    This div is animated here.
+                </p>
+            </div>
+
             <div class="footer">
                 <span class="facebook"></span>
                 <span class="instagram"></span>
