--- a/css_animations_background_sprite/index.html
+++ b/css_animations_background_sprite/index.html
@@ -37,6 +37,10 @@ Diam vel quam elementum pulvinar etiam non quam lacus. Risus quis varius quam qu
                 </p>
             </div>
 
+            <div class="transition">
+                
+            </div>
+
             <div class="footer">
                 <span class="facebook"></span>
                 <span class="instagram"></span>
