--- a/practice_ttn_home/index.html
+++ b/practice_ttn_home/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>TO THE NEW home</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/styles/reset.css">
         <link rel="stylesheet" href="assets/styles/styles.css">
     </head>
@@ -41,6 +42,65 @@
                     </div>
                 </div>
             </header>
+
+            <section>
+                <div class="banner-container">
+                    
+                        <div class="banner-bg"></div>
+                        <div class="banner-text">
+                            <div class="row">
+                                <h3>We conceive, create and manage <b>digital solutions and platforms</b> for businesses across the globe through our <b>4 Services</b></h3>
+                                
+                                <div class="services">
+                                    <div class="service-one">
+                                        <i class="fas fa-cogs fa-4x"></i>
+                                        <h4>Technology</h4>
+                                    </div>
+
+                                    <div class="service-two">
+                                        <i class="fas fa-chart-bar fa-4x"></i>
+                                        <h4>Analytics</h4>
+                                    </div>
+
+                                    <div class="service-three">
+                                        <i class="fas fa-map-marked fa-4x"></i>
+                                        <h4>Marketing</h4>
+                                    </div>
+
+                                    <div class="service-four">
+                                        <i class="fas fa-tablet fa-4x"></i>
+                                        <h4>Content</h4>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="stats">
+                                <div class="row">
+                                    <div class="stats-one">
+                                        <h4>150+</h4>
+                                        <span>business critical web & mobile applications</span>
+                                    </div>
+                                    <div class="stats-two">
+                                        <h4>100+</h4>
+                                        <span>cloud implementations</span>
+                                    </div>
+                                    <div class="stats-three">
+                                        <h4>2 Billion+</h4>
+                                        <span>impressions delivered</span>
+                                    </div>
+                                    <div class="stats-four">
+                                        <h4>100+</h4>
+                                        <span>digital marketting campaigns</span>
+                                    </div>
+                                    <div class="stats-five">
+                                        <h4>10+</h4>
+                                        <span>years on analytics</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+
+            </section>
 
         </div>
 
