minor bug fixes

--- a/introduction_to_css/ex1/index.html
+++ b/introduction_to_css/ex1/index.html
@@ -12,7 +12,7 @@
         <button id="two">Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry</button>
         <button id="three">spectrophotofluorometrically</button>
-        <button id="four"></button>
+        <button class="four">asasdsasdasdasdsadsadadad</button>
 
     </body>
 </html>
