--- a/introduction_to_css/ex3/index.html
+++ b/introduction_to_css/ex3/index.html
@@ -24,7 +24,9 @@
         <section>
             <div class="col-10 row">
                 <div class="tag-line">
-                    <div><span>Buzz @ TO THE NEW</span></div>
+                    <div>
+                        <span>Buzz @ TO THE NEW</span>
+                    </div>
                     
                 </div>
             </div>
