--- a/page_layouts_and_structure/prac/index.html
+++ b/page_layouts_and_structure/prac/index.html
@@ -30,42 +30,34 @@
             </div>
         </header>
         <section>
-            <div class="col-10">
-                <div class="container">
-                    <div class="banner">
-                        <img src="images/banner.jpg" alt="">
-                    </div>
-                </div>
+            <div class="col-10 container banner">
+                <img src="images/banner.jpg" alt="">
             </div>
-        </section>
-        <section>
             <div class="highlights">
-                <div class="col-10">
-                    <div class="container">
-                        <ul>
-                            <li>
-                                <i class="fas fa-folder-open fa-6x"></i>
-                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+                <div class="col-10 container">
+                    <ul>
+                        <li>
+                            <i class="fas fa-folder-open fa-6x"></i>
+                            <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
 
-                                <button>Read More</button>
-                            </li>
-                            <li>
-                                <i class="fas fa-folder-open fa-6x"></i>
-                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
-                                <button>Read More</button>
-                            </li>
-                            <li>
-                                <i class="fas fa-folder-open fa-6x"></i>
-                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
-                                <button>Read More</button>
-                            </li>
-                            <li>
-                                <i class="fas fa-folder-open fa-6x"></i>
-                                <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
-                                <button>Read More</button>
-                            </li>
-                        </ul>
-                    </div>
+                            <button>Read More</button>
+                        </li>
+                        <li>
+                            <i class="fas fa-folder-open fa-6x"></i>
+                            <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+                            <button>Read More</button>
+                        </li>
+                        <li>
+                            <i class="fas fa-folder-open fa-6x"></i>
+                            <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+                            <button>Read More</button>
+                        </li>
+                        <li>
+                            <i class="fas fa-folder-open fa-6x"></i>
+                            <div><h2>Title 1</h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+                            <button>Read More</button>
+                        </li>
+                    </ul>
                 </div>                
             </div>
         </section>
