--- a/page_layouts_and_structure_two/index.html
+++ b/page_layouts_and_structure_two/index.html
@@ -21,35 +21,33 @@
             <header>
                 <nav>
                     <div class="row col-10">
-                        <div class="container">
-                            <div class="left">
-                                <a href="#">
-                                    <img src="assets/images/Logo.png" class="logo" alt="Agni">
-                                </a>
-                                <div class="lang">
-                                    <ul>
-                                        <li>ENG <i class="fas fa-angle-down"></i><i class="fas fa-angle-up"></i>
-                                        </li>
-                                    </ul>
-                                </div>
+                        <div class="left">
+                            <a href="#">
+                                <img src="assets/images/Logo.png" class="logo" alt="Agni">
+                            </a>
+                            <div class="lang">
+                                <ul>
+                                    <li>ENG <i class="fas fa-angle-down"></i><i class="fas fa-angle-up"></i>
+                                    </li>
+                                </ul>
                             </div>
-                            <div class="right">
-                                    <div class="nav-items">
-                                        <a href="#"><i class="fas fa-home"></i></a>
+                        </div>
+                        <div class="right">
+                                <div class="nav-items">
+                                    <a href="#"><i class="fas fa-home"></i></a>
 
-                                        <a href="#about">About</a>
+                                    <a href="#about">About</a>
 
-                                        <a href="#ecosystems">Ecosystems</a>
+                                    <a href="#ecosystems">Ecosystems</a>
 
-                                        <a href="#resources">Resources</a>
+                                    <a href="#resources">Resources</a>
 
-                                        <a href="#contactus">Contact Us</a>
+                                    <a href="#contactus">Contact Us</a>
 
-                                        <a href="#user">
-                                            <img src="assets/images/user.png" alt="User"> <i class="fas fa-angle-down"></i>
-                                            <i class="fas fa-angle-up"></i>
-                                        </a>
-                                </div>
+                                    <a href="#user">
+                                        <img src="assets/images/user.png" alt="User"> <i class="fas fa-angle-down"></i>
+                                        <i class="fas fa-angle-up"></i>
+                                    </a>
                             </div>
                         </div>
                     </div>
@@ -83,72 +81,64 @@
                         <button class="">Get Involved</button>
                     </div>
                 </div>
-            </section>
+                <div class="row featured-videos col-8">
+                    <h2>Featured Videos</h2>
 
-            <section class="featured-videos col-8">
-                <div class="row">
-                    <div class="container">
-                        <h2>Featured Videos</h2>
+                    <div class="shadow-box videos-container">
+                        <div class="left">
+                            <img src="assets/images/image-1.png" alt="">
+                            <div class="video-caption">
+                                <div class="play-button">
+                                    <span></span>
+                                </div>
+                                <div class="caption">
+                                    <h3>Juhee Ahmed</h3>
+                                    <span class="designation">CEO, Fab CI</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <i class="fas fa-chevron-up fa-2x"></i>
 
-                        <div class="shadow-box">
-                            <div class="videos-container">
-                                <div class="left">
-                                    <img src="assets/images/image-1.png" alt="">
-                                    <div class="video-caption">
+                            <ul>
+                                <li class="video">
+                                    <div class="left shadow-box">
+                                        <img src="assets/images/images-2.png" alt="">
                                         <div class="play-button">
                                             <span></span>
                                         </div>
-                                        <div class="caption">
-                                            <h3>Juhee Ahmed</h3>
-                                            <span class="designation">CEO, Fab CI</span>
+                                    </div>
+                                    <div class="right">
+                                        <h3>Juhee Ahmed</h3>
+                                        <span class="designation">CEO, Fab CI</span>
+                                    </div>  
+                                </li>
+                                <li class="video">
+                                    <div class="left shadow-box">
+                                        <img src="assets/images/images-2.png" alt="">
+                                        <div class="play-button">
+                                            <span></span>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="right">
-                                        <i class="fas fa-chevron-up fa-2x"></i>
-
-                                        <div class="video">
-                                            <div class="left shadow-box">
-                                                <img src="assets/images/images-2.png" alt="">
-                                                <div class="play-button">
-                                                    <span></span>
-                                                </div>
-                                            </div>
-                                            <div class="right">
-                                                <h3>Juhee Ahmed</h3>
-                                                <span class="designation">CEO, Fab CI</span>
-                                            </div>
+                                    <div class="right">
+                                        <h3>Juhee Ahmed</h3>
+                                        <span class="designation">CEO, Fab CI</span>
+                                    </div>
+                                </li>
+                                <li class="video">
+                                    <div class="left shadow-box">
+                                        <img src="assets/images/images-2.png" alt="">
+                                        <div class="play-button">
+                                            <span></span>
                                         </div>
-
-                                        <div class="video">
-                                            <div class="left shadow-box">
-                                                <img src="assets/images/images-2.png" alt="">
-                                                <div class="play-button">
-                                                    <span></span>
-                                                </div>
-                                            </div>
-                                            <div class="right">
-                                                <h3>Juhee Ahmed</h3>
-                                                <span class="designation">CEO, Fab CI</span>
-                                            </div>
-                                        </div>
-
-                                        <div class="video">
-                                            <div class="left shadow-box">
-                                                <img src="assets/images/images-2.png" alt="">
-                                                <div class="play-button">
-                                                    <span></span>
-                                                </div>
-                                            </div>
-                                            <div class="right">
-                                                <h3>Juhee Ahmed</h3>
-                                                <span class="designation">CEO, Fab CI</span>
-                                            </div>
-                                        </div>
-
-                                        <i class="fas fa-chevron-down fa-2x"></i>
-                                </div>
-                            </div>
+                                    </div>
+                                    <div class="right">
+                                        <h3>Juhee Ahmed</h3>
+                                        <span class="designation">CEO, Fab CI</span>
+                                    </div>
+                                </li>
+                            </ul>
+                            <i class="fas fa-chevron-down fa-2x"></i>
                         </div>
                     </div>
                 </div>
